# synaptix

./: .gitignore  README.md  go.mod  main.go  pyproject.toml
app/: __init__.py  __main__.py  cli.py  graph.py  renderer.py  state.py  treesitter.py  tui.py  web.py
app/agents/: __init__.py  context_climber.py  discovery.py  relationship_resolver.py  semantic_indexer.py
app/prompts/: __init__.py  label.md  system.md
app/templates/: index.html
synaptix/: __main__.py  cli.py  graph.py  renderer.py
synaptix/agents/: context_climber.py  discovery.py  relationship_resolver.py  semantic_indexer.py
tools/: tool.go  write_file.go
